[gd_scene load_steps=8 format=2]

[ext_resource path="res://inventory/ItemButtonDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://inventory/InventoryDisplayContainer.gd" type="Script" id=2]
[ext_resource path="res://inventory/CharacterEquipUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://quest/QuestEquipUI.gd" type="Script" id=4]
[ext_resource path="res://quest/QuestScreen.gd" type="Script" id=5]
[ext_resource path="res://quest/QuestSelectUI.gd" type="Script" id=6]
[ext_resource path="res://quest/QuestSelectButton.gd" type="Script" id=7]

[node name="QuestScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="QuestEquipUI" type="HBoxContainer" parent="."]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 556.0
script = ExtResource( 4 )

[node name="InventoryDisplayContainer" type="VBoxContainer" parent="QuestEquipUI"]
margin_right = 330.0
margin_bottom = 548.0
size_flags_horizontal = 3
script = ExtResource( 2 )
item_display_scene_path = ExtResource( 1 )

[node name="InventoryLabel" type="Label" parent="QuestEquipUI/InventoryDisplayContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Inventory"
align = 1

[node name="VBoxCenter" type="VBoxContainer" parent="QuestEquipUI"]
margin_left = 334.0
margin_right = 665.0
margin_bottom = 548.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="QuestEquipUI/VBoxCenter"]
margin_top = 267.0
margin_right = 331.0
margin_bottom = 281.0
text = "INTERACTION"
align = 1
valign = 1

[node name="CharactersContainer" type="TabContainer" parent="QuestEquipUI"]
margin_left = 669.0
margin_right = 1000.0
margin_bottom = 548.0
size_flags_horizontal = 3

[node name="Character 1" parent="QuestEquipUI/CharactersContainer" instance=ExtResource( 3 )]

[node name="Character 2" parent="QuestEquipUI/CharactersContainer" instance=ExtResource( 3 )]
visible = false

[node name="Character 3" parent="QuestEquipUI/CharactersContainer" instance=ExtResource( 3 )]
visible = false

[node name="QuestSelectUI" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 556.0
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="QuestSelectUI"]
margin_right = 300.0
margin_bottom = 548.0

[node name="MinWidth" type="Control" parent="QuestSelectUI/VBoxContainer"]
margin_right = 300.0
rect_min_size = Vector2( 300, 0 )

[node name="QuestButton" type="Button" parent="QuestSelectUI/VBoxContainer"]
margin_top = 4.0
margin_right = 300.0
margin_bottom = 24.0
text = "Quest 1"
script = ExtResource( 7 )
quest_node_path = NodePath("../../../AvailableQuests/Quest1")

[node name="Panel" type="Panel" parent="QuestSelectUI"]
margin_left = 304.0
margin_right = 1000.0
margin_bottom = 548.0
size_flags_horizontal = 3

[node name="AvailableQuests" type="Node" parent="."]

[node name="Quest1" type="Node" parent="AvailableQuests"]

[connection signal="quest_selected" from="QuestSelectUI/VBoxContainer/QuestButton" to="QuestSelectUI" method="select_quest"]
